<resources>
    <string name="app_name">Lesson 7</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="var1">Enter the first variant</string>
    <string name="var2">Enter the second variant</string>
    <string name="var3">Enter the third variant</string>
    <string name="var4">Enter the fourth variant</string>
    <string name="btn_question">Add Question</string>
    <string name="question">Enter the text of the question</string>
    <string name="hint_to_image">hint to image</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_sign_up">Sign up</string>
</resources>
