<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:id="@+id/activity_new"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    tools:context="com.yermakov.xplatform.lesson7.ui.MainActivity"
    tools:showIn="@layout/activity_new">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/question_layout"

        android:layout_alignParentTop="true"
        android:layout_above="@+id/variant1_layout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/question"

            android:hint="@string/question"

            android:gravity="top|start"

            android:inputType="textMultiLine"
            android:ems="10" />

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/variant1_layout"

        android:layout_above="@+id/variant2_layout">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/til1"

            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/cb1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/variant1"

                android:hint="@string/var1"

                android:inputType="textPersonName"
                android:ems="10"
                android:layout_weight="1" />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/cb1"

            android:layout_alignParentEnd="true"

            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/variant2_layout"

        android:layout_above="@+id/variant3_layout">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/til2"

            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/cb2">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/variant2"

                android:hint="@string/var2"

                android:inputType="textPersonName"
                android:ems="10" />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/cb2"

            android:layout_alignParentEnd="true"

            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/variant3_layout"

        android:layout_above="@+id/variant4_layout">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/til3"

            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/cb3">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/variant3"

                android:hint="@string/var3"

                android:inputType="textPersonName"
                android:ems="10" />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/cb3"

            android:layout_alignParentEnd="true"

            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/variant4_layout"

        android:layout_above="@+id/button_send">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/til4"

            android:layout_toStartOf="@+id/cb4">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/variant4"

                android:hint="@string/var4"

                android:inputType="textPersonName"
                android:ems="10" />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/cb4"

            android:layout_alignParentEnd="true"

            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/button_send"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:text="@string/btn_question"/>

</RelativeLayout>